--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@
       </div>
       <div class="credits">
    
-        Designed by <a href="/">Deeksha</a>
+        Designed by <a href="/">Harshitha and Team</a>
       </div>
     </div>
   </footer><!-- End Footer -->
